Width fix on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1050,7 +1050,7 @@ img {
 
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
-@media screen and (max-with: 350px){
+@media screen and (max-width: 350px){
   .container{
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
